--- a/user/.inputrc
+++ b/user/.inputrc
@@ -1,4 +1,6 @@
 
+set enable-bracketed-paste on
+
 # alternate mappings for "page up" and "page down" to search the history
 "\e[5~": history-search-backward
 "\e[6~": history-search-forward
