--- a/user/.inputrc
+++ b/user/.inputrc
@@ -1,5 +1,7 @@
 
 set enable-bracketed-paste on
+set bell-style none
+
 
 # alternate mappings for "page up" and "page down" to search the history
 "\e[5~": history-search-backward
