--- a/user/.gitconfig
+++ b/user/.gitconfig
@@ -1,32 +1,25 @@
 [user]
-	name = Stanislav Lechev [AngelFire]
+	name = Stanislav Lechev [0xAF]
 	email = af@0xAF.org
-
 [core]
 	pager = diff-so-fancy | less --tabs=4 -RFX
-	editor = /usr/bin/vim
+	editor = vim
 	excludesfile = /home/af/.gitignore_global
-
 [log]
 	decorate = true
-
 [commit]
 	template = /home/af/.gitmessage.txt
-
-# colors {{{
 [color]
 	diff = auto
 	branch = auto
 	interactive = auto
 	status = auto
 	ui = true
-
 [color "diff-highlight"]
 	oldNormal = red bold
 	oldHighlight = red bold 52
 	newNormal = green bold
 	newHighlight = green bold 22
-
 [color "diff"]
 	meta = yellow
 	frag = magenta bold
@@ -34,40 +27,43 @@
 	old = red bold
 	new = green bold
 	whitespace = red reverse
-
 [color "branch"]
 	current = red reverse
 	local = blue
 	remote = green
-
 [color "status"]
 	added = yellow
 	changed = green
 	untracked = cyan
-
 [diff-so-fancy]
 	first-run = false
-# }}}
-
-# push/pull/diff/options {{{
 [push]
-	#default = simple
 	default = current
 [pull]
 	default = current
 [diff]
 	mnemonicprefix = true
+	guitool = kdiff3
 [branch]
 	autosetuprebase = always
 [apply]
 	whitespace = nowarn
-# }}}
-
 [alias]
-	ls = log --pretty=format:"%C(green)%h\\ %C(yellow)[%ad]%Cred%d\\ %Creset%s%Cblue\\ [%an]" --decorate --date=relative
-	ll = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [a:%an,c:%cn]" --decorate --numstat
-	lc  = "!f() { git ll "$1"^.."$1"; }; f"
-	lnc = log --pretty=format:"%h\\ %s\\ [%cn]"
+	ls = log --pretty=format:%C(green)%h\\ %C(yellow)[%ad]%Cred%d\\ %Creset%s%Cblue\\ [%an]--decorate --date=relative
+	ll = log --pretty=format:%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [a:%an,c:%cn]--decorate --numstat
+	lc = "!f() { git ll $1^..$1; }; f"
+	lnc = log --pretty=format:%h\\ %s\\ [%cn]
 	fl = log -u
 	filelog = log -u
-
+[merge]
+	tool = kdiff3
+[difftool "vscode"]
+	path = /usr/bin/code-oss
+[mergetool "vscode"]
+	path = /usr/bin/code-oss
+[i18n]
+	filesEncoding = utf-8
+[difftool "kdiff3"]
+	path = /usr/bin/kdiff3
+[mergetool "kdiff3"]
+	path = /usr/bin/kdiff3
